tests/error/struct_errors/assign_call.err
Error: Unsupported (at $FILE:17:4)
   | 
15 | @guppy
16 | def bar() -> None:
17 |     foo().x += 1
   |     ^^^^^ Assigning to this expression is not supported

Help: Consider assigning this value to a local variable first before assigning
the field `x`

Guppy compilation failed due to 1 previous error
